@@ -1,3 +1,8 @@
+2002-11-28  Luke Gorrie  <luke@bluetail.com>
+
+	* elisp/edb.el (edb-attach-mode): Bound "b" to
+	edb-toggle-breakpoint in attach buffers, as a shortcut.
+
 2002-11-28  Martin Bjorklund  <mbj@bluetail.com>
 
 	* elisp/edb.el: Added visual breakpoints, both in source files and
